# MIPTProgrammingTechnologyTerm3

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp
task3/: CMakeLists.txt
